# cloudformation-template-schema

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  NOTICE  README.md  buildspec.yml  pom.xml  pyproject.toml
.github/workflows/: pr-ci.yaml
cfn-schemas/: cfn-parameter.json
cfn-schemas/ap-northeast-1/: 3tierAsgApp-spec.json  all-spec.json  networking-spec.json  serverless-spec.json
cfn-schemas/ap-northeast-2/: 3tierAsgApp-spec.json  all-spec.json  networking-spec.json  serverless-spec.json
cfn-schemas/ap-northeast-3/: 3tierAsgApp-spec.json  all-spec.json  networking-spec.json  serverless-spec.json
cfn-schemas/ap-south-1/: all-spec.json
cfn-schemas/ap-southeast-1/: 3tierAsgApp-spec.json  all-spec.json  networking-spec.json
cfn-schemas/ap-southeast-2/: all-spec.json
cfn-schemas/ca-central-1/: all-spec.json  serverless-spec.json
cfn-schemas/eu-central-1/: 3tierAsgApp-spec.json  all-spec.json  networking-spec.json  serverless-spec.json
cfn-schemas/eu-west-1/: all-spec.json
cfn-schemas/eu-west-2/: 3tierAsgApp-spec.json  all-spec.json  networking-spec.json  serverless-spec.json
cfn-schemas/eu-west-3/: 3tierAsgApp-spec.json  all-spec.json  serverless-spec.json
cfn-schemas/sa-east-1/: all-spec.json
cfn-schemas/us-east-1/: all-spec.json  networking-spec.json
cfn-schemas/us-east-2/: 3tierAsgApp-spec.json  all-spec.json  networking-spec.json  serverless-spec.json  vpc-subnet-spec.json
cloudformation_template_schema/: cli.py  generate.py  generator.py  schema.py
tests/: test_cloudformation_template_schema.py
(+39 files in other folders)
